# DarkLens-MCP-Server

./: .gitignore  README.md  pyproject.toml  requirements.txt
darklens_mcp_server/: __init__.py  server.py
data/: dark_patterns.json
demo/: example_usage.py
server/: mcp_server.py
