[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "darklens-mcp-server"
version = "0.1.0"
description = "Dark Pattern Detection MCP Server for ethical UX analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
darklens-server = "darklens_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["darklens_mcp_server"]